fix: Adjusts search icon position on mobile

--- a/src/assets/sass/components/_search.scss
+++ b/src/assets/sass/components/_search.scss
@@ -2,25 +2,25 @@
   margin-top: 84px;
   position: relative;
 
-  &::after {
-    background-color: var(--sandy);
-    background-image: url('../../assets/icons/ic-search.svg');
-    background-position: center;
-    background-repeat: no-repeat;
-    border-radius: 0 3px 3px 0;
-    content: '';
-    height: 72px;
-    position: absolute;
-    right: 55px;
-    top: 0;
-    width: 118px;
-  }
-
   &-select {
     display: block;
     margin-left: auto;
     margin-right: auto;
     max-width: 691px;
+
+    &::after {
+      background-color: var(--sandy);
+      background-image: url('../../assets/icons/ic-search.svg');
+      background-position: center;
+      background-repeat: no-repeat;
+      border-radius: 0 3px 3px 0;
+      content: '';
+      height: 72px;
+      position: absolute;
+      right: 0;
+      top: 0;
+      width: 118px;
+    }
 
     &__placeholder,
     &__single-value {
